3단계 - 로또(2등) (#3508)
* refactor: create checkLottoResult method

* refactor: create LottoNumber

* refactor: create LottoCashPrize

* refactor: remove LottoMachine

* refactor: add hashCode

* docs: add requirements

* feat: inputBonusBallNumber

* feat: match Bonus Number

* feat: print second rank result